kubernetes/development/creator-workflow-service-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: creator-workflow-service
    service-type: business-service
  name: creator-workflow-service-netpol
  namespace: ainflue-development
spec:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to: []
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ainflue-development
    ports:
    - port: 8007
      protocol: TCP
  podSelector:
    matchLabels:
      app: creator-workflow-service
  policyTypes:
  - Ingress
  - Egress
